--- a/index.html
+++ b/index.html
@@ -119,39 +119,81 @@
             </div>
         </div>
     </section>
-
-<section class="speakers">
-  <div class="content">
-    <h2>Keynote Speakers</h2>
+<section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">At Your Service</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <h3>Sturdy Templates</h3>
+                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <h3>Ready to Ship</h3>
+                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                        <h3>Up to Date</h3>
+                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                        <h3>Made with Love</h3>
+                        <p class="text-muted">You have to make your websites with love these days!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<section class="speakers" id="speakers">
+  <div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 text-center">
+    <h2 class="section-heading">Keynote Speakers</h2>
+    <hr>
 
     <ul class="people">
+
       <li>
-        <a href="https://twitter.com/varelidi">
-          <img src="/img/logistics/speakers/chloe.jpg" />
-        </a>
-        <h4>Chloe Varelidi</h4>
-        <h5>Community + Content Director at littleBits</h5>
-        <h6><a href="https://twitter.com/varelidi">@varelidi</a></h6>
+        <a href="https://www.linkedin.com/in/josecong">
+          <img src="img/jose_cong.jpg" />
+        
+        <h4>Jose Cong</h4>
+        <h5>Former Head of Talent NEST (Acq. by Google)</h5>
+        <a href="http://twitter.com/Jose_Cong" class="btn"><i class="fa fa-twitter"></i></a>
       </li>
+
+     <li>
+        <a href="https://www.linkedin.com/in/annedeluca">
+          <img src="img/anne_deluca.jpg" />
+        <h4>Anne De Luca</h4>
+        <h5>Harvard University</h5>
+        <!-- <a href="http://twitter.com/faroukdey" class="btn"><i class="fa fa-twitter"></i></a> -->
+      </li>
+
       <li>
-        <a href="https://twitter.com/evankorth">
-          <img src="/img/logistics/speakers/evan_korth.jpg" />
-        </a>
-        <h4>Evan Korth</h4>
-        <h5>Clinical Professor at NYU, co-founder of hackNY, co-founder of CSNYC</h5>
-        <h6><a href="https://twitter.com/evankorth">@evankorth</a></h6>
+       <a href="https://www.linkedin.com/in/faroukdey">
+          <img src="img/farouk_dey.jpg" />
+        <h4>Farouk Dey</h4>
+        <h5>AVP & Director of Career Services Stanford University</h5>
+        <a href="http://twitter.com/faroukdey" class="btn"><i class="fa fa-twitter"></i></a>
       </li>
-      <li>
-        <a href="https://twitter.com/bkeepers">
-          <img src="/img/logistics/speakers/brandon_keepers.jpg" />
-        </a>
-        <h4>Brandon Keepers</h4>
-        <h5>Head of Open Source, GitHub</h5>
-        <h6><a href="https://twitter.com/bkeepers">@bkeepers</a></h6>
-      </li>
-    </ul>
-  </div>
-</section>
 <!-- 
       <li>
         <a href="https://www.linkedin.com/in/andrewkmaguire">
