--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="UR(x) is the university recruiting conference. Join university job developers, campus recruiters, and student leaders." content="">
+    <meta name="UR(x) - The University Recruiting Conference - Stanford University - December 6-7" content="">
 
-    <title> University Recruiting(x) </title>
+    <title> UR(x) - The University Recruiting Conference </title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -119,64 +119,21 @@
             </div>
         </div>
     </section>
-<section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
 <section class="speakers" id="speakers">
   <div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
     <h2 class="section-heading">Keynote Speakers</h2>
     <hr>
-
     <ul class="people">
-
       <li>
         <a href="https://www.linkedin.com/in/josecong">
           <img src="img/jose_cong.jpg" />
         
         <h4>Jose Cong</h4>
         <h5>Former Head of Talent NEST (Acq. by Google)</h5>
-        <a href="http://twitter.com/Jose_Cong" class="btn"><i class="fa fa-twitter"></i></a>
+        <a href="http://twitter.com/Jose_Cong" class="btn"><i class="fa fa-2x fa-twitter"></i></a>
       </li>
 
      <li>
@@ -194,33 +151,6 @@
         <h5>AVP & Director of Career Services Stanford University</h5>
         <a href="http://twitter.com/faroukdey" class="btn"><i class="fa fa-twitter"></i></a>
       </li>
-<!-- 
-      <li>
-        <a href="https://www.linkedin.com/in/andrewkmaguire">
-          <img src="img/andrew_maguire.jpeg" />
-        </a>
-        <h4>Andrew Magure</h4>
-        <h5>Founder & CEO LookSharp</h5>
-        <a href="http://twitter.com/andykmaguire" class="btn"><i class="fa fa-twitter"></i></a>
-      </li>
-
-      <li>
-        <a href="https://www.linkedin.com/in/andrewkmaguire">
-          <img src="img/andrew_maguire.jpeg" />
-        </a>
-        <h4>Student</h4>
-        <h5>UC Berkley</h5>
-        <a href="http://twitter.com/andykmaguire" class="btn"><i class="fa fa-twitter"></i></a>
-      </li>
-
-      <li>
-        <a href="https://www.linkedin.com/in/andrewkmaguire">
-          <img src="img/andrew_maguire.jpeg" />
-        </a>
-        <h4>Ron Storm</h4>
-        <h5>UC Berkley</h5>
-        <a href="http://twitter.com/andykmaguire" class="btn"><i class="fa fa-twitter"></i></a>
-      </li> -->
 
     </ul>
   </div>
