--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="header-content">
             <div class="header-content-inner">
               <div class="transbox">
-                <h1>UR(x)</h1>
+                <h1>Hi Maggie! :)</h1>
                 
                 <h3>The University Recruiting Conference </h3>
                 <hr>
@@ -392,7 +392,7 @@
   <div class="content">
     <h2 class= "text-center">Frequently Asked Questions</h2>
     <hr>
-   
+
     <div class="grid">
       
       <div class="faq col-1-2 col-1-mobile">
@@ -434,7 +434,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What meals are provided?</h4>
-          <p>The Kickoff Dinner, breakfast, lunch, snacks, and all the coffee you can drink throughout the congerence are included with your registration. Please let us knoww if if you have any special dietary requirements. We are happy to accomodate any dietary requests made in advance of the conference. </p>
+          <p>The Kickoff Dinner, breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us knoww if if you have any special dietary requirements. We are happy to accomodate any dietary requests made in advance of the conference. </p>
         </div>
       </div>
 
