--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     <aside class="bg-primary">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Join key stakeholders in univeristy recruiting.</h2>
+                <h2>Join key stakeholders in university recruiting.</h2>
                 <a href="http://www.eventbrite.com/e/urx-the-tech-university-recruiting-conference-tickets-22616829546?ref=ebtnebregn" target="_blank" class="btn btn-default btn-xl sr-button">Register Today!</a>
             </div>
         </div>
@@ -404,21 +404,21 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>I will be travelling to the conference, where should I stay?</h4>
-          <p>There are a number of great hotel options in Palo Alto and the surrounding area with easy access to the Maguerrite, Stanfords Free Shuttle. In addition a number of attendees are arriving early to spend the weekend in San Francisco and will be commuting from the city.</p>
+          <p>There are a number of great hotel options in Palo Alto and the surrounding area with easy access to the Marguerite, Stanford's Free Shuttle. In addition a number of attendees are arriving early to spend the weekend in San Francisco and will be commuting from the city.</p>
         </div>
       </div>
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>How do I get to Stanford?</h4>
-          <p>Stanford is convenienctly located equidistant from both San Francisco International Airport (SFO) and San Jose Interntional Airport (SJC). If you're driving, we will provide parking at the venue. Whether you are staying in Palo Alto or traveling from elsewhere in the San Francisco Bay Area, you can reach Stanford by way of convenient public transportation. Please visit this <a href="http://visit.stanford.edu/plan/public_transit.html">link</a> for more info. </p>
+          <p>Stanford is conveniently located equidistant from both San Francisco International Airport (SFO) and San Jose International Airport (SJC). If you're driving, we will provide parking at the venue. Whether you are staying in Palo Alto or traveling from elsewhere in the San Francisco Bay Area, you can reach Stanford by way of convenient public transportation. Please visit this <a href="http://visit.stanford.edu/plan/public_transit.html">link</a> for more info. </p>
         </div>
       </div>
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>When should I arrive / depart?</h4>
-          <p>The conference will begin on Monday evening with the sponors dinner. You should try to land in the early afternoon on Monday so you don't miss the dinner.  The conference will end on Wednesday early evening by 5pm.</p>
+          <p> Conference registration will begin Tuesday morning at 7AM. The conference will end on Wednesday early evening by 3pm.</p>
         </div>
       </div>
 
@@ -433,7 +433,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What meals are provided?</h4>
-          <p>The Kickoff Dinner, breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us knoww if if you have any special dietary requirements. We are happy to accomodate any dietary requests made in advance of the conference. </p>
+          <p>The Kickoff Dinner, breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us know if if you have any special dietary requirements. We are happy to accommodate any dietary requests made in advance of the conference. </p>
         </div>
       </div>
 
