--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">In addition to the tremendous speaker lineup above, we are honored to have panelist and attendees representing top universities, organisations and companies.</p>
+                    <p class="large text-muted">In addition to the tremendous speaker lineup above, we are honored to have panelists and attendees representing top universities, organisations and companies.</p>
                 </div>
             </div>
         </div>
