tech or technical

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">(x) = Technical Recruiting </a>
+                <a class="navbar-brand page-scroll" href="#page-top">(x) = Tech Recruiting </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -106,7 +106,7 @@
                  <h2 >About</h2>
                  <hr>
                   
-                  <h3>UR(x) is is an annual conference bringing together university job developers, tech talent leaders, and student leaders. Conference attendees, partners and sponsors all have a vested interest in creating, maintaining, or advancing great university recruiting or employer relations program. Join us as we share best practices, discuss challenges, and explore solutions all while establishing great relationships. </h3>
+                  <h3>UR(x) is is an annual conference bringing together university job developers, tech talent leaders, and student leaders. Conference attendees, partners and sponsors all have a vested interest in creating, maintaining, and advancing great university recruiting programs. Join us as we share best practices, discuss challenges, and explore solutions all while establishing great relationships. </h3>
                   <br>
 
                   
