--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="team-member">
                         <img src="img/randall.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Kate Randall</h4>
-                        <p class="text-muted">Kate is the Head of University Recruiting at Tesla <a href="https://www.tesla.com/careers/university">Tesla</a> </p>
+                        <p class="text-muted"> Head of University Recruiting, Tesla Motors <a href="https://www.tesla.com/careers/university">Tesla</a> </p>
                         <ul class="list-inline social-buttons">
                             
                             <li><a href="http://linkedin.com/in/katerandall"><i class="fa fa-linkedin"></i></a>
