--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="team-member">
                         <img src="img/dey.jpg " class="img-responsive img-circle" alt="">
                         <h4>Farouk Dey </h4>
-                        <p class="text-muted">AVP Career Education, Stanford University <a href="https://beam.stanford.edu">BEAM, Stanford Career Eductation</a></p>
+                        <p class="text-muted">AVP Career Education, Stanford University &emsp; <a href="https://beam.stanford.edu">BEAM, Stanford Career Eductation</a></p>
                         <ul class="list-inline social-buttons">
                             <li><a href="http://twitter.com/faroukdey"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -161,7 +161,7 @@
                     <div class="team-member">
                         <img src="img/randall.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Kate Randall</h4>
-                        <p class="text-muted"> Head of University Recruiting, Tesla Motors <a href="https://www.tesla.com/careers/university">Tesla</a> </p>
+                        <p class="text-muted"> Head of University Recruiting, Tesla Motors &emsp; <a href="https://www.tesla.com/careers/university">Tesla University Recruiting</a> </p>
                         <ul class="list-inline social-buttons">
                             
                             <li><a href="http://linkedin.com/in/katerandall"><i class="fa fa-linkedin"></i></a>
