--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>Do you offer refunds?</h4>
-          <p>We offer full refunds for your ticket before October 15th. After that, we won't be able to provide refunds. You are always welcome to transfer your ticket to someone else if you let us know.</p>
+          <p>We offer full refunds for your ticket before September 1st. After that, we won't be able to provide refunds. You are always welcome to transfer your ticket to someone else if you let us know.</p>
         </div>
       </div>
 
