--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/cong.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/jose.jpg" class="img-responsive img-circle" alt="">
                         <h4>Jose Cong </h4>
                         <p class="text-muted">Founder, Adeptable. Former Head of Talent Nest (Acq. Google) & University Recruiting Lead Apple</p>
                         <ul class="list-inline social-buttons">
@@ -161,7 +161,7 @@
                     <div class="team-member">
                         <img src="img/randall.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Kate Randall</h4>
-                        <p class="text-muted"> Head of University Recruiting, Tesla Motors &emsp; <a href="https://www.tesla.com/careers/university">Tesla University Recruiting</a> </p>
+                        <p class="text-muted"> Head of University Recruiting, Tesla Motors &emsp;&emsp; <a href="https://www.tesla.com/careers/university">Tesla University Recruiting</a> </p>
                         <ul class="list-inline social-buttons">
                             
                             <li><a href="http://linkedin.com/in/katerandall"><i class="fa fa-linkedin"></i></a>
