--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
 
           <li>
            <span class="time_block">1:45 PM - 2:30 PM</span>
-            <h5 class="block_title">Tech for Liberal Arts</h5>
-            <p class="block_description">Jeff D'Andria (Stanford University)</p>
+            <h5 class="block_title">Psychology of a University Recruiter</h5>
+            <p class="block_description">Jeff D'Andria (Stanford University ex. Microsoft Recruiter)</p>
           </li>
         
           <li>
