--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
           <li>
            <span class="time_block">1:45 PM - 2:30 PM</span>
-            <h5 class="block_title">Psychology of a University Recruiter</h5>
+            <h5 class="block_title">Psychology of a Recruiter</h5>
             <p class="block_description">Jeff D'Andria (Stanford University ex. Microsoft Recruiter)</p>
           </li>
         
