--- a/index.html
+++ b/index.html
@@ -402,7 +402,21 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What is the conference about?</h4>
-          <p>UR(x) is is an annual conference bringing together university job developers, tech talent leaders, and student leaders. Conference attendees, partners and sponsors all have a vested interest in creating, maintaining, or advancing great university recruiting or employer relations program </p>
+          <p>UR(x) is is a conference bringing together university job developers, tech talent leaders, and student leaders. Conference attendees, partners and sponsors all have a vested interest in creating, maintaining, or advancing great university recruiting or employer relations program. </p>
+        </div>
+        </div>
+
+        <div class="faq col-1-2 col-1-mobile">
+        <div class="wrap">
+          <h4>What the heck does "UR(x)" stand for?</h4>
+          <p>UR(x) is a play on the math formula f(x). In our case case, UR = University Recruiting and x is a variable that we use to set the theme for the conference from year to year. This year x = Technical University Recruiting. </p>
+        </div>
+      </div>
+
+      <div class="faq col-1-2 col-1-mobile">
+        <div class="wrap">
+          <h4>Who should attend?</h4>
+          <p>Unversity Job Developers (University Employer Relations, External Relations, Employer Development etc) University Recruiters, Student Organization Leaders, and organizations that help promote or faccillitate connections between students and employers. </p>
         </div>
       </div>
 
