--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                  <h2 >About</h2>
                  <hr>
                   
-                  <h3>UR(x) is is an annual conference bringing together university job developers, tech talent leaders, and student leaders. Conference attendees, partners and sponsors all have a vested interest in creating, maintaining, and advancing great university recruiting programs. Join us as we share best practices, discuss challenges, and explore solutions all while establishing great relationships. </h3>
+                  <h3>UR(x) is is an annual conference bringing together university job developers, university recruiting leaders, and student organization leaders. Conference attendees, partners and sponsors all have a vested interest in creating, maintaining, and advancing great university recruiting programs. Join us as we share best practices, discuss challenges, and explore solutions all while establishing great relationships. </h3>
                   <br>
 
                   
@@ -402,7 +402,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What is the conference about?</h4>
-          <p>UR(x) is is a conference bringing together university job developers, tech talent leaders, and student leaders. Conference attendees, partners and sponsors all have a vested interest in creating, maintaining, or advancing great university recruiting or employer relations program. </p>
+          <p>UR(x) is is a conference bringing together university job developers, university recruiting leaders, and student organization leaders. Conference attendees, partners and sponsors all have a vested interest in creating, maintaining, or advancing great university recruiting or employer relations programs. </p>
         </div>
         </div>
 
