--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>Who should attend?</h4>
-          <p>Unversity Job Developers (University Employer Relations, External Relations, Employer Development etc) University Recruiters, Student Organization Leaders, and organizations that help promote or faccillitate connections between students and employers. </p>
+          <p>Unversity Job Developers (University Employer Relations, External Relations, Employer Development etc) University Recruiters, Student Organization Leaders, and organizations that help promote or facillitate connections between students and employers. </p>
         </div>
       </div>
 
