--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/dey.jpg " class="img-responsive img-circle" alt="">
-                        <h4>Farouk Dey </h4>
-                        <p class="text-muted">AVP Career Education, Stanford University &emsp; <a href="https://beam.stanford.edu">BEAM, Stanford Career Eductation</a></p>
+                        <h4>Jeff D'Andria </h4>
+                        <p class="text-muted">Assistant Director of Career Ventures Stanford University &emsp; <a href="https://beam.stanford.edu">BEAM, Stanford Career Eductation</a></p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="http://twitter.com/faroukdey"><i class="fa fa-twitter"></i></a>
+                            <li><a href="http://twitter.com/jeffitout"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://www.linkedin.com/in/faroukdey"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="https://www.linkedin.com/in/jeffereydandria"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
