--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/dey.jpg " class="img-responsive img-circle" alt="">
+                        <img src="img/jeff.jpg " class="img-responsive img-circle" alt="">
                         <h4>Jeff D'Andria </h4>
                         <p class="text-muted">Assistant Director of Career Ventures Stanford University &emsp; <a href="https://beam.stanford.edu">BEAM, Stanford Career Eductation</a></p>
                         <ul class="list-inline social-buttons">
