--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <ul class="list-inline social-buttons">
                             <li><a href="http://twitter.com/jeffitout"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://www.linkedin.com/in/jeffereydandria"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="https://www.linkedin.com/in/jeffreydandria"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
