--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="team-member">
                         <img src="img/jeff.jpg " class="img-responsive img-circle" alt="">
                         <h4>Jeff D'Andria </h4>
-                        <p class="text-muted">Assistant Director of Career Ventures Stanford University &emsp; <a href="https://beam.stanford.edu">BEAM, Stanford Career Eductation</a></p>
+                        <p class="text-muted">Career Ventures BEAM, Stanford University. Former University Recruiter Microsoft &emsp; <a href="https://beam.stanford.edu">BEAM, Stanford Career Eductation</a></p>
                         <ul class="list-inline social-buttons">
                             <li><a href="http://twitter.com/jeffitout"><i class="fa fa-twitter"></i></a>
                             </li>
