--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
           <li>
             <span class="time_block">10:15 AM - 11:15 AM</span>
-            <h5 class="block_title">Recruiting us student panel</h5>
+            <h5 class="block_title">The Student Perspective Panel</h5>
             <p class="block_description"> Engineering student leaders from Harvard, MIT, & Stanford </span></p>
 
           </li>
@@ -319,7 +319,7 @@
            <span class="time_block">1:45 PM - 2:30 PM</span>
 
             <h5 class="block_title">Psychology of a Recruiter</h5>
-            <p class="block_description">Jeff D'Andria (Stanford University ex. Microsoft Recruiter)</p>
+            <p class="block_description">Jeff D'Andria (Stanford University, ex. Microsoft Recruiter)</p>
           </li>
         
           <li>
@@ -337,7 +337,7 @@
           <li>
             <span class="time_block">4:00 PM - 4:45 PM</span>
             <h5 class="block_title"> Keynote </h5>
-            <p class="block_description">Farouk Dey (Stanford University)</p>
+            <p class="block_description">TBD</p>
           </li>
         
           <li>
