--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="UR(x) is the university recruiting conference. Join university job developers, campus recruiters, and student leaders." content="">
-    <meta name="UR(x) - The University Recruiting Conference - Stanford University - December 5-6" content="">
+    <meta name="UR(x) - The University Recruiting Conference - San Francisco Bay Area - December 5-6" content="">
 
     <title> UR(x) - The University Recruiting Conference </title>
 
