--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 
                 <h3>The University Recruiting Conference </h3>
                 <hr>
-                <h3>December 6-7, 2016 | Stanford University</h3>
+                <h3> Spring 2016 | Stanford University</h3>
                 <br>
                 </br>
                 <a href="http://www.eventbrite.com/e/urx-the-tech-university-recruiting-conference-tickets-22616829546?ref=ebtnebregn" target="_blank" class="btn btn-primary btn-xl page-scroll">Register</a>
