--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
                 
                 <h3>The University Recruiting Conference </h3>
                 <hr>
-                <h3> Spring 2017 | Stanford University</h3>
+                <h3> May 2 - 4, 2017 | Lyft HQ</h3>
+                <h4> 185 Berry Street</h4>
+                 <h4> San Francisco, CA</h4>
                 <br>
                 </br>
                 <a href="http://www.eventbrite.com/e/urx-the-tech-university-recruiting-conference-tickets-22616829546?ref=ebtnebregn" target="_blank" class="btn btn-primary btn-xl page-scroll">Register</a>
