--- a/index.html
+++ b/index.html
@@ -461,14 +461,20 @@
           <li>
             <span class="time_block">9:30 AM - 2:30 PM</span>
             <h5 class="block_title">San Francisco Tech Trek</h5>
-            <!-- <p class="block_description">Proudly Sponsored by:</p> -->
+            <p class="block_description">Visit various employers in the San Francisco</p>
           </li>
 
 
           <li>
            <span class="time_block">9:30 AM - 2:30 PM</span>
             <h5 class="block_title">Silicon Valley Tech Trek</h5>
-            <!-- <p class="block_description">Proudly Sponsored by:</p> -->
+            <p class="block_description">Visit various employers in Palo Alto & Mountain View</p>
+          </li>
+           
+           <li>
+           <span class="time_block">9:30 AM - 2:30 PM</span>
+            <h5 class="block_title">Startup Trek</h5>
+            <p class="block_description">Visit various startups throughout the Bay Area</p>
           </li>
 
          
