--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
           <li>
             <span class="time_block">11:30am - 1:00pm</span>
             <h5 class="block_title">Lunch</h5>
-            <!-- <p class="block_description">Proudly Sponsored by:</p> -->
+            <p class="block_description"> <a href="http://victoryhallsf.com">Victory Hall & Parlor</a></p>
+              
           </li>
         
           <li>
