--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
 
           <li>
             <span class="time_block">10:15am - 11:15am</span>
-            <h5 class="block_title">The Student Perspective Panel</h5>
-            <p class="block_description"> Engineering student leaders from Harvard, MIT, & Stanford </span></p>
+            <h5 class="block_title">Panel: Emerging Technology in UR</h5>
+            <p class="block_description"> Handshake, LinkedIn, InternMatch  </span></p>
           </li>
 
           <li>
