--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
           <li>
             <span class="time_block">10:15am - 11:15am</span>
-            <h5 class="block_title">The Student Perspective Panel</h5>
+            <h5 class="block_title">Panel: The Student Perspective </h5>
             <p class="block_description"> Engineering student leaders from Harvard, MIT, & Stanford </span></p>
           </li>
 
