--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           <li>
            <span class="time_block">2:30pm - 3:15pm</span>
             <h5 class="block_title">Psychology of a Recruiter</h5>
-            <p class="block_description">Jeff D'Andria (Stanford University, ex. Microsoft Recruiter)</p>
+            <p class="block_description">Jeff D'Andria (Stanford University, Former Microsoft Recruiter)</p>
           </li>
           
           <li>
@@ -537,22 +537,22 @@
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
-          <h4>How do I get to Stanford?</h4>
-          <p>Stanford is conveniently located equidistant from both San Francisco International Airport (SFO) and San Jose International Airport (SJC). If you're driving, we will provide parking at the venue. Whether you are staying in Palo Alto or traveling from elsewhere in the San Francisco Bay Area, you can reach Stanford by way of convenient public transportation. Please visit this <a href="http://visit.stanford.edu/plan/public_transit.html">link</a> for more info. </p>
+          <h4>How do I get to Lyft Headquarters?</h4>
+          <p>Lyft HQ is conveniently located in the SoMa neighborhood in the city of San Francisco. Lyft is a short walk from the Caltrain Station at 4th & King Street and the BART. Parking is limited. so we adise against driving and suggest you take a Lyft &#x1f609;. </p>
         </div>
       </div>
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>When should I arrive / depart?</h4>
-          <p> Conference registration will begin Tuesday morning at 7AM. The conference will end on Wednesday early evening by 3pm.</p>
+          <p> Conference registration will begin Tuesday morning at 8AM. The conference will end on Thursday early afternoon by 4pm.</p>
         </div>
       </div>
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>Do you offer refunds?</h4>
-          <p>We offer full refunds for your ticket before April 1st. After that, we won't be able to provide refunds. You are always welcome to transfer your ticket to someone else, simply let us know and we will process the request.</p>
+          <p>We offer full refunds for your ticket before March 15th. We will not be able to provide refunds after the 15th of March. You are always welcome to transfer your ticket to someone else, simply let us know and we will process the request.</p>
         </div>
       </div>
 
@@ -560,14 +560,14 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What meals are provided?</h4>
-          <p>The Kickoff Dinner, breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us know if if you have any special dietary requirements. We are happy to accommodate any dietary requests made in advance of the conference. </p>
+          <p>Breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us know if if you have any special dietary requirements. We are happy to accommodate any dietary requests made in advance of the conference. </p>
         </div>
       </div>
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>Who organizes UR(x)?</h4>
-          <p>UR(x) is organized by a group university administrators and university recruiters with support from great partners and sponsors. </p>
+          <p>UR(x) is organized by a group university administrators and university recruiters with support from great partners, volunteers, and sponsors. </p>
         </div>
       </div>
 
