--- a/index.html
+++ b/index.html
@@ -531,14 +531,14 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>I will be travelling to the conference, where should I stay?</h4>
-          <p>There are a number of great hotel options in Palo Alto and the surrounding area with easy access to the Marguerite, Stanford's Free Shuttle. In addition a number of attendees are arriving early to spend the weekend in San Francisco and will be commuting from the city.</p>
+          <p>There are a number of great hotel options in San Francisco and the surrounding area with easy access to both the Caltrain and BART. </p>
         </div>
       </div>
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>How do I get to Lyft Headquarters?</h4>
-          <p>Lyft HQ is conveniently located in the SoMa neighborhood in the city of San Francisco. Lyft is a short walk from the Caltrain Station at 4th & King Street and the BART. Parking is limited. so we adise against driving and suggest you take a Lyft &#x1f609;. </p>
+          <p>Lyft HQ is conveniently located in the SoMa neighborhood in the city of San Francisco. Lyft is a short walk from the Caltrain Station at 4th & King Street and the BART. Parking is limited. so we adise against driving and suggest you take a Lyft &#x1f609; . </p>
         </div>
       </div>
 
