--- a/index.html
+++ b/index.html
@@ -459,21 +459,27 @@
         <ul>
 
           <li>
-            <span class="time_block">9:30 AM - 2:30 PM</span>
+            <span class="time_block">9:30 AM - 3:00 PM</span>
             <h5 class="block_title">San Francisco Tech Trek</h5>
+            <p class="block_description">Visit various employers in the San Francisco</p>
+          </li>
+            
+          <li>
+            <span class="time_block">9:30 AM - 3:00 PM</span>
+            <h5 class="block_title">San Francisco Startup Trek</h5>
             <p class="block_description">Visit various employers in the San Francisco</p>
           </li>
 
 
           <li>
-           <span class="time_block">9:30 AM - 2:30 PM</span>
+           <span class="time_block">9:30 AM - 3:00 PM</span>
             <h5 class="block_title">Silicon Valley Tech Trek</h5>
             <p class="block_description">Visit various employers in Palo Alto & Mountain View</p>
           </li>
            
            <li>
-           <span class="time_block">9:30 AM - 2:30 PM</span>
-            <h5 class="block_title">Startup Trek</h5>
+           <span class="time_block">9:30 AM - 3:00 PM</span>
+            <h5 class="block_title">Silicon Valley Startup Trek</h5>
             <p class="block_description">Visit various startups throughout the Bay Area</p>
           </li>
 
