--- a/index.html
+++ b/index.html
@@ -385,19 +385,19 @@
           </li>
         
           <li>
-            <span class="time_block">1:15 PM - 2:00 PM</span>
+            <span class="time_block">1:30pm - 2:00pm</span>
             <h5 class="block_title">The value of student run hackathons </h5>
             <p class="block_description">Arshi Argawal (Stanford University)</p>
           </li>
 
          <li>
-            <span class="time_block">1:15 PM - 2:00 PM</span>
+            <span class="time_block">1:30pm - 2:00pm</span>
             <h5 class="block_title">Beyond the Career Fair - Creating Dynamic University Recruiting Events </h5>
             <p class="block_description">Jeff D'Andria (Stanford University)</p>
           </li>
             
          <li>
-            <span class="time_block">1:15 PM - 2:00 PM</span>
+            <span class="time_block">1:30pm - 2:00pm</span>
             <h5 class="block_title">OCR Programs in a digital world</h5>
             <p class="block_description"></p>
           </li>
