--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
           <li>
             <span class="time_block">11:30am - 1:00pm</span>
-            <h5 class="block_title">Lunch</h5>
+            <h5 class="block_title">Networking Lunch</h5>
             <p class="block_description"> <a href="http://victoryhallsf.com">Victory Hall & Parlor</a></p>
               
           </li>
@@ -380,7 +380,7 @@
 
           <li>
             <span class="time_block">11:30am - 1:00pm</span>
-            <h5 class="block_title">Lunch</h5>
+            <h5 class="block_title">Networking Lunch</h5>
             <p class="block_description"> <a href="http://victoryhallsf.com">Victory Hall & Parlor</a></p>
           </li>
         
