--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What the heck does "UR(x)" stand for?</h4>
-          <p>UR(x) is a play on the math formula f(x). In our case case, UR = University Recruiting and x is a variable that we use to set the theme for the conference from year to year. This year x = Technical University Recruiting. </p>
+          <p>UR = University Recruiting and x is a variable that we use to set the theme for the conference from year to year. This year x = Technical University Recruiting. </p>
         </div>
       </div>
 
@@ -548,17 +548,17 @@
         </div>
       </div>
 
-      <div class="faq col-1-2 col-1-mobile">
+<!--       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>When should I arrive / depart?</h4>
-          <p> Conference registration will begin Tuesday morning at 8AM. The conference will end on Thursday early afternoon by 4pm.</p>
+          <p> Plan to arrive Conference registration will begin Tuesday morning May 2nd at 8AM. The conference sessions will end on Wednesday early afternoon by 4pm. There will be </p>
         </div>
-      </div>
+      </div> -->
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>Do you offer refunds?</h4>
-          <p>We offer full refunds for your ticket before March 15th. We will not be able to provide refunds after the 15th of March. You are always welcome to transfer your ticket to someone else, simply let us know and we will process the request.</p>
+          <p>We offer full refunds for your ticket before March 1st. We will not be able to provide refunds after the 1st of March. You are always welcome to transfer your ticket to someone else, simply let us know and we will process the request.</p>
         </div>
       </div>
 
@@ -573,7 +573,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>Who organizes UR(x)?</h4>
-          <p>UR(x) is organized by a group university administrators and university recruiters with support from great partners, volunteers, and sponsors. </p>
+          <p>UR(x) is organized by a group of university administrators and university recruiters with support from great partners, volunteers, and sponsors. </p>
         </div>
       </div>
 
