--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">(x) = Tech Recruiting </a>
+                <a class="navbar-brand page-scroll" href="#page-top">(x) = Technical Recruiting </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -523,7 +523,7 @@
         <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What the heck does "UR(x)" stand for?</h4>
-          <p>UR = University Recruiting and x is a variable that we use to set the theme for the conference from year to year. This year x = Technical University Recruiting. </p>
+          <p>UR = University Recruiting and x is a variable that we use to set the theme for the conference from year to year. This year x = Technical Recruiting. </p>
         </div>
       </div>
 
