--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 <h1>UR(x)</h1>
                 
                 <h3>The University Recruiting Conference </h3>
+                 <h3>(<i>x</i>) = Technical Recruiting </h3>
                 <hr>
                 <h3> May 2 - 4, 2017 | Lyft HQ</h3>
                 <h4> 185 Berry Street</h4>
