--- a/index.html
+++ b/index.html
@@ -112,25 +112,8 @@
                   <h3>UR(x) is an annual conference bringing together university job developers, university recruiting leaders, and student organization leaders.</h3>
                   <br>
                     <h2 >At UR(x), You Will ...</h2>
-                    <ul>
-<li><span style="font-size: 14pt;"><span style="font-size: 14pt;">Hear inspiring stories, get different perspectives and fresh ideas on how to build and scale culture.</span></span></li>
-</ul>
-<ul>
-<li><span style="font-size: 14pt;"><span style="font-size: 14pt;">Learn the specific culture development strategies used by some of the world&#8217;s most innovative companies.</span></span></li>
-</ul>
-<ul>
-<li><span style="font-size: 14pt;"><span style="font-size: 14pt;">Gain a deeper understanding of how to increase employee engagement, optimize talent, and develop high performing teams.</span></span></li>
-</ul>
-<ul>
-<li><span style="font-size: 14pt;"><span style="font-size: 14pt;">Discover the latest trends, techniques, and tools to help you build thriving cultures.</span></span></li>
-</ul>
-<ul>
-<li><span style="font-size: 14pt;"><span style="font-size: 14pt;">Connect with hundreds of like-minded culture champions to brainstorm new ways of improving the employee experience.</span></span></li>
-</ul>
-<ul>
-<li><span style="font-size: 14pt;">Walk away with tactical, strategic insight for building company culture and much more. </span></li>
-</ul>
-                    <h3>Share best practices, discuss challenges, and explore solutions all while establishing great relationships.</h3>
+                   
+                    <h3>Network with university recruiting professionals from top companies and univeristies. Share best practices, discuss challenges, and explore solutions.</h3>
 
                   
                   </br>
