--- a/index.html
+++ b/index.html
@@ -129,11 +129,12 @@
 
 
     <section class="speakers" id="speakers" class="bg-light-gray">
+         <h2 class= "text-center">Speakers</h2>
+                    <hr>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Speakers</h2>
-                    <h3 class="section-subheading text-muted">Our wonderful speakers and keynotes are a diverse group of student,university, and employer talent leaders.</h3>
+                    <!-- <h3 class="section-subheading text-muted">Our wonderful speakers and keynotes are a diverse group of student,university, and employer talent leaders.</h3> -->
                 </div>
             </div>
             <div class="row">
