--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </div>
                 
             </div>
-                        <p class="text-muted">Career Ventures Tech & Startups <br /> <a href="https://beam.stanford.edu"> Stanford Career Eductation.</a>  </p>
+                        <p class="text-muted">Career Ventures Tech & Startups <br /> <a href="https://beam.stanford.edu"> Stanford Career Eductation</a>  </p>
                         <ul class="list-inline social-buttons">
                             <li><a href="http://twitter.com/jeffitout"><i class="fa fa-twitter"></i></a>
                             </li>
