faq and remove tbd from schedule

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
           <li>
             <span class="time_block">5:30 pm - 7:00 pm</span>
             <h5 class="block_title">Happy Hour </h5>
-             <p class="block_description">TBD</p>
+             <p class="block_description"></p>
           </li>
 
     </ul>
@@ -561,7 +561,7 @@
            <li>
            <span class="time_block">2:15 pm - 3:00 pm</span>
              <h5 class="block_title">Closing Keynote</h5>
-            <p class="block_description">TBD</p>
+            <p class="block_description"></p>
           </li>
 
 <!--           <li>
@@ -790,8 +790,8 @@
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
-          <h4>How Can I Become a Sponsor or Partner?</h4>
-          <p>We are excited to partner with companies, organizations, and schools that share our passion. Please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSea31zXtnE6pmZ6Buv9nFhTZy7MvaE8ljNmCTdtv_B2gpbgsQ/viewform">sinterest form</a> and we will be in touch to discuss options. </p>
+          <h4>How Can I Become a Sponsor or Host a Trek?</h4>
+          <p>We are excited to consider opportunities that will enhance the conference experience. For sponosorship, please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSea31zXtnE6pmZ6Buv9nFhTZy7MvaE8ljNmCTdtv_B2gpbgsQ/viewform">sponsor interest form</a>. If you are interested in hosting a trek on site at your company please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfQaZ47f9wvestoc8bir3x5xavPxRC28XTBaXg6VWNeUYT9fQ/viewform"> trek interest form</a>. </p>
         </div>
       </div>
 
