favicon and tweaks

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
+    <link rel="icon" href="img/favicon.png">
+
     <!-- Custom Fonts -->
 
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
@@ -109,7 +111,7 @@
                  <h2 >About</h2>
                  <hr>
                   
-                  <h3>UR(x) is a conference bringing together university job developers, university recruiting leaders, and student organization leaders in the tech industry.</h3>
+                  <h3>URx is a conference bringing together university job developers, university recruiting leaders, and student organization leaders in the tech industry.</h3>
                   <br>
                     <h2 >At UR(x), You Will ...</h2>
                    
@@ -816,6 +818,15 @@
         </div>
   </div>
 </section>
+
+
+<footer>
+  <div class="content almost-full-width">
+    <img class="footer-logo" src="img/logos/urx_web_logo_white.png">
+    <h5 class="copyright">&copy; URx - The University Recruiting Conference 2017</h5>
+  </div>
+</footer>
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
