--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             </div>
 
             
-            <h3 class= "text-center", style= "color:black">Attendees from Top Universities, Tech Companies, & Startups</h3>
+            <!-- <h3 class= "text-center", style= "color:black">Attendees from Top Universities, Tech Companies, & Startups</h3>
             <hr>
 
 
@@ -379,7 +379,7 @@
                  
         </div>
         </div>
-        </div>
+        </div> -->
 
     </section>
 
