--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </br>
                 <a href="http://www.eventbrite.com/e/urx-the-tech-university-recruiting-conference-tickets-22616829546?ref=ebtnebregn" target="_blank" class="btn btn-primary btn-xl page-scroll">Register</a>
                 
-            x</div>
+            </div>
             </div>
             </div>
         </div>
