date tweak and typo in faq

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h3>The University Recruiting Conference </h3>
                  <h3><span style= "color:#f05f40">x</span> = Technical Recruiting </h3>
                 <hr>
-                <h3> May 2 - 4, 2017 | Lyft HQ</h3>
+                <h3> May 2 - 3, 2017 | Lyft HQ</h3>
                 <h4> 185 Berry Street</h4>
                  <h4> San Francisco, CA</h4>
                 <br>
@@ -748,7 +748,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>How do I get to Lyft Headquarters?</h4>
-          <p>Lyft HQ is conveniently located in the SoMa neighborhood in the city of San Francisco. Lyft is a short walk from the Caltrain Station and Light Rail at 4th & King Street. Parking is limited. so we adise against driving and suggest you take a Lyft &#x1f609; . </p>
+          <p>Lyft HQ is conveniently located in the SoMa neighborhood in the city of San Francisco. Lyft is a short walk from the Caltrain Station and Light Rail at 4th & King Street. Parking is limited, so we advise against driving and suggest you take a Lyft &#x1f609; . </p>
         </div>
       </div>
 
