techinical to tech

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><span style= "color:#f05f40">x</span> = Technical Recruiting </a>
+                <a class="navbar-brand page-scroll" href="#page-top"><span style= "color:#f05f40">x</span> = Tech Recruiting </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -89,7 +89,7 @@
                 <h1>UR<span style= "color:#f05f40">x</span></h1>
                 
                 <h3>The University Recruiting Conference </h3>
-                 <h3><span style= "color:#f05f40">x</span> = Technical Recruiting </h3>
+                 <h3><span style= "color:#f05f40">x</span> = Tech Recruiting </h3>
                 <hr>
                 <h3> May 2 - 3, 2017 | Lyft HQ</h3>
                 <h4> 185 Berry Street</h4>
@@ -724,7 +724,7 @@
         <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What the heck does "URx" stand for?</h4>
-          <p>UR = University Recruiting and x is a variable that we use to set the theme for the conference from year to year. This year x = Technical Recruiting. </p>
+          <p>UR = University Recruiting and x is our theme for the conference. This year x = Tech Recruiting. </p>
         </div>
       </div>
 
@@ -741,7 +741,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>When and Where is URx?</h4>
-          <p>URx is May 2-4, 2017 at Lyft HQ in San Francisco. Lyft is located at 185 Berry Street. </p>
+          <p>URx is May 2-3, 2017 at Lyft HQ in San Francisco. Lyft is located at 185 Berry Street. </p>
         </div>
       </div>
 
