--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                   <br>
                     <h2 >At UR<span style= "color:#f05f40">x</span>, You Will ...</h2>
                    
-                    <h3>Learn best practices from recruiting leaders and establish relationships with the university administrators key to executing your on campus strategy. </h3>
+                    <h3>Learn best practices from univeristy recruiting leaders. <br> 
+                        Establish relationships with the university administrators key to executing your on campus strategy. </h3>
 
                   
                   </br>
