jeff is a big ass

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <div class="col-sm-4 col-1-mobile">
                     <div class="team-member">
                       <img src="img/speakers/jeff.jpg " class="img-responsive img-circle" alt="">
-                        <a id="modal-6" href="#modal-container-6" role="button" class="btn" data-toggle="modal">Jeff D"Andria</a>
+                        <a id="modal-6" href="#modal-container-6" role="button" class="btn" data-toggle="modal">Jeff D'Andria</a>
             
             <div class="modal fade" id="modal-container-6" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
