--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What is the conference about?</h4>
-          <p>UR(x) is is a conference bringing together university job developers, university recruiting leaders, and student organization leaders in the tech industry.     </p>
+          <p>URx is is a conference bringing together university recruiting professionals in the tech industry.     </p>
         </div>
         </div>
 
@@ -675,14 +675,14 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What meals are provided?</h4>
-          <p>Lighe breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us know if you have any special dietary requirements. We are happy to accommodate any dietary requests. </p>
+          <p>Light breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us know if you have any special dietary requirements. We are happy to accommodate any dietary requests. </p>
         </div>
       </div>
 
         <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>Who should attend?</h4>
-          <p>Unversity Job Developers (University Employer Relations, External Relations, Employer Development etc) University Recruiters, Student Organization Leaders, and organizations that help promote or facillitate connections between students and employers. </p>
+          <p>Unversity recruiters, University administrators (involved in employer relations, external relations, employer development, etc), Student Organization Leaders, and organizations that help promote or facillitate connections between students and employers. </p>
         </div>
       </div>
 
@@ -696,7 +696,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>How Can I Speak at UR(x)?</h4>
-          <p>You can find the  are always happy to have passionate people get involved and share their talents. You can find the <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXTXsLlBLGbnsoXukYfmsG4wObMVhaOt4I2IEdesbFSL78Ug/viewform">speaker application here</a>. </p>
+          <p> We are always happy to have passionate people get involved and share their expertise! If you are interested in speaking, you can find the <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXTXsLlBLGbnsoXukYfmsG4wObMVhaOt4I2IEdesbFSL78Ug/viewform">speaker application here</a>. </p>
         </div>
       </div>
 
@@ -710,7 +710,7 @@
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>Will you be selling tickets at the door?</h4>
-          <p>Unfortunately we won't. To achieve our goal of an true intimate conference experiecne we are limiting attendance to 300 people. We anticipate tickets will sell out. It is recommended that you buy your tickets early to guarantee your spot. </p>
+          <p>Unfortunately we won't. To achieve our goal of a true intimate conference experiecne we are limiting attendance to 250 people. We anticipate tickets will sell out. It is recommended that you buy your tickets early to guarantee your spot. </p>
         </div>
       </div>
 
