--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
-          <h4>How Can I Speak at UR(x)?</h4>
+          <h4>How Can I Speak at URx?</h4>
           <p> We are always happy to have passionate people get involved and share their expertise! If you are interested in speaking, you can find the <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXTXsLlBLGbnsoXukYfmsG4wObMVhaOt4I2IEdesbFSL78Ug/viewform">speaker application here</a>. </p>
         </div>
       </div>
