--- a/index.html
+++ b/index.html
@@ -682,13 +682,13 @@
         <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>Who should attend?</h4>
-          <p>Unversity recruiters, University administrators (involved in employer relations, external relations, employer development, etc), Student Organization Leaders, and organizations that help promote or facillitate connections between students and employers. </p>
+          <p>Unversity recruiters, University administrators (involved in employer relations, employer development, etc), Student Organization Leaders, and organizations that help promote or facillitate connections between students and employers. </p>
         </div>
       </div>
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
-          <h4>Who organizes UR(x)?</h4>
+          <h4>Who organizes URx?</h4>
           <p>URx is organized by a group of university administrators and university recruiters with support from great partners, volunteers, and sponsors. </p>
         </div>
       </div>  
