--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <p  class="text-muted">Career Ventures </br>  Stanford University</p>
               </li>
               <li>
-                <img src="img/speakers/alicia.jpg" id="modal-7" href="#modal-container-7" role="button" data-toggle="modal">
+                <img src="img/speakers/P1310272.JPG" id="modal-7" href="#modal-container-7" role="button" data-toggle="modal">
                 <a class="name" href="https://www.linkedin.com/in/aliciarharris/">Alicia Harris</a>
                 <p  class="text-muted">TAP Program Manager</br> Code2040</p>
               </li>
