--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             </div>
 
             <div class="col-sm-3 col-2-mobile">
-            <img src="img/attendees/poly.png"></a>
+            <img src="img/attendees/medallia.png"></a>
             </div>
             
             <div class="col-sm-3 col-2-mobile">
@@ -722,7 +722,7 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
     <div class="col-5 hidden-xs">
     <!-- <img class="footer-logo" src="img/logos/urx_web_logo_white.png"> -->
      </div>
-     
+
     <div class="col-7 col-xs-12">
     <h5 class="copyright">&copy; UR<sup style= "color:#f05f40">x</sup> - The University Recruiting Conference 2017</h5>
   </div>
