mailchimp copy prep

--- a/index.html
+++ b/index.html
@@ -605,6 +605,7 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Join a community of university recruiting professionals.</h2>
+<!--                 <h2>Join our mailing list and receive event updates including upcoming career fairs, hackathons, and of university recruiting news.</h2> -->
 
                 <a href="http://www.eventbrite.com/e/urx-the-tech-university-recruiting-conference-tickets-22616829546?ref=ebtnebregn" target="_blank" class="btn btn-default btn-xl sr-button">Register Today!</a>
             </div>
