--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
 
           <li>
             <span class="time_block">10:15 am - 11:00 am</span>
-            <h5 class="block_title">Moving from schools-based to skills-based recruitment</h5>
+            <h5 class="block_title">Moving from schools-based to skills-based university recruiting</h5>
             <p class="block_description">Tey Scott, Linkedin</p> 
           </li>
           
