--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h4 class="text-center"> Attendees include university recruiting professionals from top universities, organisations and companies.</h4>
+                    <h4 class="text-center"> Attendees include university recruiting professionals from top universities, organizations and companies.</h4>
                 </div>
             </div>
 
