--- a/index.html
+++ b/index.html
@@ -460,12 +460,12 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
             <p class="block_description">Alicia Harris, Beth Scheer, Stevon Cook</p>
           </li          <li>
              <span class="time_block">2:20 pm - 3:05 pm</span>
-            <h5 class="block_title">Beyond the Career Fair - Creating Dynamic University Recruiting Events</h5>
+            <h5 class="block_title">Beyond the Career Fair - Creating dynamic university recruiting events</h5>
              <p class="block_description"></p>
           </li>
           <li>
            <span class="time_block">2:20 pm - 3:05 pm</span>
-            <h5 class="block_title">Exploting new technology in university recruiting</h5>
+            <h5 class="block_title">Exploring new technology in university recruiting</h5>
              <p class="block_description"></p>
           </li>
         
@@ -477,13 +477,13 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
 
          <li>
              <span class="time_block">3:15 pm - 4:00 pm</span>
-            <h5 class="block_title">From Deans to Students,An immersive approach to working with universities </h5>
+            <h5 class="block_title">From Deans to Students, An immersive approach to working with universities </h5>
              <p class="block_description"></p>
           </li>
 
           <li>
              <span class="time_block">3:15 pm - 4:00 pm</span>
-            <h5 class="block_title">Employer Relations -Designing your program around your students</h5>
+            <h5 class="block_title">Employer Relations - Designing your program around your students</h5>
             <p class="block_description"></p>
           </li>
 
@@ -521,13 +521,13 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
 
           <li>
            <span class="time_block">10:00 am - 10:45 am</span>
-            <h5 class="block_title">Key Metrics in Assessing your UR program</h5>
+            <h5 class="block_title">Key metrics in assessing your UR program</h5>
             <p class="block_description"></p>
           </li>
 
           <li>
            <span class="time_block">10:00 am - 10:45 am</span>
-            <h5 class="block_title">Leveling the playing field - Creating opportunities for Liberal Arts Majors in Tech</h5>
+            <h5 class="block_title">Leveling the playing field - Creating opportunities for liberal arts majors in tech</h5>
             <p class="block_description"></p>
           </li>
             
@@ -642,7 +642,7 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What meals are provided?</h4>
-          <p>Continental breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us know if you have any special dietary requirements. We are happy to accommodate any dietary requests. </p>
+          <p>Continental breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us know if you have any dietary requirements. We are happy to accommodate dietary requests. </p>
         </div>
       </div>
 
@@ -663,14 +663,14 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>How Can I Speak at UR<sup style= "color:#f05f40">x</sup>?</h4>
-          <p> We are always happy to have passionate people get involved and share their expertise! If you are interested in speaking, you can find the <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXTXsLlBLGbnsoXukYfmsG4wObMVhaOt4I2IEdesbFSL78Ug/viewform">speaker application here</a>. </p>
+          <p> We are always happy to have passionate people get involved and share their expertise! If you are interested in speaking, you can find the <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXTXsLlBLGbnsoXukYfmsG4wObMVhaOt4I2IEdesbFSL78Ug/viewform" target="_blank">speaker application here</a>. </p>
         </div>
       </div>
 
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>How Can I Become a Sponsor or Host a Trek?</h4>
-          <p>We are excited to consider opportunities that will enhance the conference experience. For sponosorship, please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSea31zXtnE6pmZ6Buv9nFhTZy7MvaE8ljNmCTdtv_B2gpbgsQ/viewform">sponsor interest form</a>. If you are interested in hosting a trek on site at your company please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfQaZ47f9wvestoc8bir3x5xavPxRC28XTBaXg6VWNeUYT9fQ/viewform"> trek interest form</a>. </p>
+          <p>We are excited to consider opportunities that will enhance the conference experience. For sponosorship, please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSea31zXtnE6pmZ6Buv9nFhTZy7MvaE8ljNmCTdtv_B2gpbgsQ/viewform" target="_blank">sponsor interest form</a>. If you are interested in hosting a trek on site at your company please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfQaZ47f9wvestoc8bir3x5xavPxRC28XTBaXg6VWNeUYT9fQ/viewform" target="_blank"> trek interest form</a>. </p>
         </div>
       </div>
 
@@ -684,7 +684,7 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>How Can I Volunteer at UR<sup style= "color:#f05f40">x</sup>?</h4>
-          <p>We are always happy to have passionate people get involved and share their talents. You can find the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeq__QSUHRDYAH-CUpRU1QBh7b-4LQqt9NxmysHHrQBo9OfnA/viewform">volunteer application here</a>. </p>
+          <p>We are always happy to have passionate people get involved and share their talents. You can find the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeq__QSUHRDYAH-CUpRU1QBh7b-4LQqt9NxmysHHrQBo9OfnA/viewform" target="_blank">volunteer application here</a>. </p>
         </div>
       </div>
 
