--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               </li>
               <li>
                 <img src="img/speakers/joslin.jpg" id="modal-4" href="#modal-container-4" role="button" data-toggle="modal">
-                <a class="name" href="https://www.linkedin.com/in/josilintorrano" target="_blank">Joslin Torrano</a>
+                <a class="name" href="https://www.linkedin.com/in/josilintorrano" target="_blank">Josilin Torrano</a>
                 <p  class="text-muted"> University Recruiting Lead </br> Facebook</p>
               </li>
               
