--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   
                   <h3>UR<sup style= "color:#f05f40">x</sup> brings together the community of passionate university recruiting professionals from both industry and higher education. <br> Join peers, industry veterans, and talent leaders to gain the inspiration, knowledge, and connections that are the fuel behind every successful university recruiting program. </h3>
                   <br>
-                    <h2>In 2017, <span style= "color:#f05f40">X</span> = Tech Recruiting</h2>
+                    <h2>This year, <span style= "color:#f05f40">X</span> = Tech Recruiting</h2>
                    
                     <h3>Take advantage of an agenda curated with a particular focus on tech recruiting. We will touch on topics such as the rising cost of interns and new grads, how to create more visibility for liberal arts students, leveraging your UR program to increase diversity, and much more! </h3>
 
