--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>What meals are provided?</h4>
-          <p>Continental breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us know if you have any dietary requirements. We are happy to accommodate dietary requests. </p>
+          <p>Continental breakfast, lunch, snacks, and all the coffee you can drink throughout the conference are included with your registration. Please let us know if you have any dietary restrictions. We are happy to accommodate dietary requests. </p>
         </div>
       </div>
 
