--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
 
          <li>
              <span class="time_block">3:15 pm - 4:00 pm</span>
-            <h5 class="block_title">From Deans to Students, An immersive approach to working with universities </h5>
+            <h5 class="block_title">From Treks to Tech Talks, An immersive approach to university employer partnerships </h5>
              <p class="block_description"></p>
           </li>
 
