--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <li>
                 <img src="img/speakers/tey.jpg" id="modal-5" href="#modal-container-5" role="button" data-toggle="modal">
                 <a class="name" href="https://www.linkedin.com/in/teyscott/" target="_blank">Tey Scott</a>
-                <p  class="text-muted">Dir. Talent Acquisition </br> Linkedin</p>
+                <p  class="text-muted">Sr. Dir. Talent Acquisition </br> Linkedin</p>
               </li>
               <li>
                 <img src="img/speakers/jeff.jpg" id="modal-6" href="#modal-container-6" role="button" data-toggle="modal">
